# strata

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/prices/: README.md  handlers.py  prices_2023.csv  prices_2024_h1.csv  run.py  vendor_b.csv
src/strata/: __init__.py  __main__.py  cli.py  exceptions.py  hashing.py  models.py  output.py  pipeline.py  registry.py  schema.py
src/strata/readers/: __init__.py  base.py  csv_reader.py  excel_reader.py
src/strata/storage/: __init__.py  base.py  duckdb.py  sqlite.py
tests/: conftest.py  test_cli.py  test_hashing.py  test_pipeline.py  test_readers.py  test_schema.py  test_storage_duckdb.py  test_storage_sqlite.py
